@@ -643,3 +643,5 @@
 	   - support for projections now complete. See MAP_INSTALL for details.
 	   - new keywords (BOOLEAN,INTEGER,FLOAT,COMPLEX,STRING) in ISA()
 	   - two new system variables: !TRUE and !FALSE
+	   - initial import for SCOPE_TRACEBACK() (/sys and /struct not ready)
+
